# rat-rs

./: Cargo.toml  LICENSE  README.md  all.html  fn.run_main.html  index.html  search-index.js  sidebar-items.js
args/: enum.TransportType.html  enum.WayType.html  index.html  sidebar-items.js  struct.CliArgs.html
docs/: .rustc_info.json  .rustdoc_fingerprint.json  crates.js  fn.main.html  index.html  search-index.js  settings.html  source-files.js
docs/args/: enum.WayType.html
docs/error/: enum.CliError.html  sidebar-items.js
docs/implementors/clap/derive/: trait.Args.js  trait.CommandFactory.js  trait.FromArgMatches.js  trait.ValueEnum.js
docs/implementors/core/clone/: trait.Clone.js
docs/implementors/core/convert/: trait.From.js
docs/implementors/core/default/: trait.Default.js
docs/implementors/core/fmt/: trait.Debug.js  trait.Display.js
docs/implementors/core/marker/: trait.Freeze.js  trait.Send.js  trait.Sync.js  trait.Unpin.js
docs/implementors/lazy_static/: trait.LazyStatic.js
docs/implementors/serde/de/: trait.Deserialize.js
docs/implementors/serde/ser/: trait.Serialize.js
docs/implementors/std/error/: trait.Error.js
docs/rat_rs/: all.html  constant.API_URI.html  fn.main.html  fn.run_main.html  index.html
docs/rat_rs/args/: enum.TransportType.html  enum.WayType.html  index.html  struct.CliArgs.html
docs/rat_rs/error/: enum.CliError.html  index.html
docs/rat_rs/structs/: index.html  struct.Response.html  struct.ResponseResult.html  struct.Schedule.html
docs/rat_rs/utils/: fn.slugify.html  index.html  sidebar-items.js  struct.REPLACEABLE.html
docs/src/rat_rs/: args.rs.html  error.rs.html  main.rs.html  structs.rs.html  utils.rs.html
docs/structs/: index.html  sidebar-items.js
docs/utils/: fn.slugify.html  struct.REPLACEABLE.html
error/: enum.CliError.html  index.html
implementors/clap/derive/: trait.ArgEnum.js  trait.Parser.js
implementors/core/convert/: trait.From.js
implementors/core/fmt/: trait.Display.js
implementors/core/marker/: trait.Sync.js
src/: args.rs  error.rs  main.rs  structs.rs  utils.rs
src/rat_rs/: args.rs.html  error.rs.html
structs/: struct.Response.html  struct.ResponseResult.html  struct.Schedule.html
utils/: index.html  struct.REPLACEABLE.html
(+6 files in other folders)
