[package]
name = "rat-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest= { version = "0.11.10", features = ["json"] } 
tokio = { version = "1", features = ["full"] }
serde_json = { version = "1.0.79" }
clap = { version = "3.1.6" , features = ["derive"] }
log = "~0.4"
env_logger = "0.9.0"
derive_more = "0.99.17"
serde = { version = "1.0.136", features = ["derive"] }
regex = "1.5.5"
lazy_static = "1.4.0"
