[package]
name = "rat-rs"
version = "0.1.2"
edition = "2021"
rust-version = "1.62.0"
authors = ["nag763 <loic.labeye@tutanota.de>"]
license = "MIT"
description = "A simple cli tool to fetch transports schedules on the Ile-de-France région"
documentation = "https://nag763.github.io/rat-rs/"
repository = "https://github.com/nag763/rat-rs"
readme = "./README.md"
categories = ["command-line-utilities" ]
keywords = ["cli", "rest", "schedule", "time", "transports"]

[dependencies]
reqwest= { version = "0.11.11", features = ["json"] } 
tokio = { version = "1.19.2", features = ["full"] }
serde_json = { version = "1.0.82" }
clap = { version = "3.2.8" , features = ["derive"] }
log = "0.4.17"
env_logger = "0.9.0"
derive_more = "0.99.17"
serde = { version = "1.0.137", features = ["derive"] }
regex = "1.5.6"
lazy_static = "1.4.0"
unidecode = "0.3.0"
